# Audio-pattern-detection-juce-plugin

./: .gitignore  test.jucer
Builds/LinuxMakefile/: Makefile
GUIaudioPlugin/: CMakeLists.txt  GUIaudioPlugin.jucer
GUIaudioPlugin/Builds/LinuxMakefile/: Makefile
GUIaudioPlugin/Source/: Main.cpp  MainComponent.cpp  MainComponent.h  Page0.cpp  Page0.h  Page1.cpp  Page1.h  Page2.cpp  Page2.h  Page3.cpp  Page3.h  Page4.cpp  Page4.h
OSCreciever/: CMakeLists.txt  OSCreciever.jucer  metadata.txt
OSCreciever/Builds/LinuxMakefile/: Makefile
OSCreciever/Builds/linux-aarch64/: Makefile  compileDebugElkPi4.sh  compileReleaseElkPi4.sh
OSCreciever/Builds/linux-x86_64/: Makefile
OSCreciever/Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
OSCreciever/festa/: festa.txt  track1.mid
Source/: Page1.cpp  Page1.h  Page2.h  Page3.h  Page4.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
